dataset1235/2025-2/805158916/users/644501727/executions/1584167357_1630070338.log
== SUBMISSION (2025-08-27 14:21:19)
-- CODE: 
numero = (input())
quadrado = numero * 2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
---- user output:
5.05.0
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
---- user output:
10.510.5
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
---- user output:
-100.0-100.0
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
---- user output:
12.112.1
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
---- user output:
-4.5-4.5
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
---- user output:
2.02.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:20:04)
-- CODE: 
numero = int(input())
quadrado = numero * 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5.0'
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.5'
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-100.0'
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.1'
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-4.5'
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '2.0'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:21:44)
-- CODE: 
numero = true(input())
quadrado = numero * 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = true(input())
             ^^^^
NameError: name 'true' is not defined. Did you mean: 'True'?
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = true(input())
             ^^^^
NameError: name 'true' is not defined. Did you mean: 'True'?
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = true(input())
             ^^^^
NameError: name 'true' is not defined. Did you mean: 'True'?
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = true(input())
             ^^^^
NameError: name 'true' is not defined. Did you mean: 'True'?
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = true(input())
             ^^^^
NameError: name 'true' is not defined. Did you mean: 'True'?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = true(input())
             ^^^^
NameError: name 'true' is not defined. Did you mean: 'True'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:21:45)
-- CODE: 
numero = true(input())
quadrado = numero * 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = true(input())
             ^^^^
NameError: name 'true' is not defined. Did you mean: 'True'?
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = true(input())
             ^^^^
NameError: name 'true' is not defined. Did you mean: 'True'?
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = true(input())
             ^^^^
NameError: name 'true' is not defined. Did you mean: 'True'?
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = true(input())
             ^^^^
NameError: name 'true' is not defined. Did you mean: 'True'?
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = true(input())
             ^^^^
NameError: name 'true' is not defined. Did you mean: 'True'?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = true(input())
             ^^^^
NameError: name 'true' is not defined. Did you mean: 'True'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:19:54)
-- CODE: 
numero = float(input())
quadrado = numero * 2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
---- user output:
21.0
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
---- user output:
-200.0
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
---- user output:
24.2
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
---- user output:
-9.0
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:43:26)
-- CODE: 
numero = float(input())
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
---- user output:
25.0
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
---- user output:
110.25
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
---- user output:
10000.0
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
---- user output:
146.41
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
---- user output:
20.25
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
